rename SP, fix path for SP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,13 @@ target_link_libraries(unicorn2lsl c++)
 endif()
 
 # use static libraries where possible to facilitate distribution of the executable
-find_library(SP NAMES libserialport.a libserialport.lib PATHS external/lsl/lib /usr/local/lib)
-find_library(BUFFER NAMES libbuffer.a libbuffer.lib PATHS external/buffer/lib)
+find_library(SERIALPORT NAMES libserialport.a libserialport.lib PATHS external/serialport/lib /usr/local/lib)
+find_library(BUFFER NAMES libbuffer.a libbuffer.lib PATHS external/buffer/lib /usr/local/lib)
 find_library(PORTAUDIO NAMES libportaudio.a portaudio.lib portaudio_static_x64.lib portaudio_x64.lib PATHS external/portaudio/lib /usr/local/lib)
 find_library(RESAMPLE NAMES libsamplerate.a samplerate.lib PATHS external/samplerate/lib /usr/local/lib)
 find_library(LSL NAMES liblsl.a lsl.lib PATHS external/lsl/lib /usr/local/lib)
 
-target_link_libraries(unicorn2txt   ${SP})
-target_link_libraries(unicorn2lsl   ${SP} ${LSL})
-target_link_libraries(unicorn2ft    ${SP} ${BUFFER})
-target_link_libraries(unicorn2audio ${SP} ${PORTAUDIO} ${RESAMPLE})
+target_link_libraries(unicorn2txt   ${SERIALPORT})
+target_link_libraries(unicorn2lsl   ${SERIALPORT} ${LSL})
+target_link_libraries(unicorn2ft    ${SERIALPORT} ${BUFFER})
+target_link_libraries(unicorn2audio ${SERIALPORT} ${PORTAUDIO} ${RESAMPLE})
